force-app/main/default/objects/Flow_Dependent_Picklist__mdt/Flow_Dependent_Picklist__mdt.object-meta.xml
<CustomObject>
    <label>Flow Dependent Picklist</label>
    <pluralLabel>Flow Dependent Picklists</pluralLabel>
</CustomObject>