force-app/main/default/objects/Flow_Dependent_Picklist__mdt/fields/Controlling_field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Controlling_field_API_Name__c</fullName>
    <label>Controlling field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>