force-app/main/default/objects/Flow_Dependent_Picklist__mdt/fields/Dependent_field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_field_API_Name__c</fullName>
    <label>Dependent field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>