force-app/main/default/objects/Flow_Dependent_Picklist__mdt/fields/Dependent_field_Value__c.field-meta.xml
<CustomField>
    <fullName>Dependent_field_Value__c</fullName>
    <label>Dependent field Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>