force-app/main/default/objects/Flow_Dependent_Picklist__mdt/fields/Secondary_Controlling_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Controlling_Field_API_Name__c</fullName>
    <label>Secondary Controlling Field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>