force-app/main/default/objects/Flow_Dependent_Picklist__mdt/fields/Secondary_Controlling_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Controlling_Field_Value__c</fullName>
    <label>Secondary Controlling Field Value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>